# faultmap

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.dev  Dockerfile.dev-local  PLAN-01-foundation.md  PLAN-04-slicing.md  PLAN-05-integration.md  PLAN-07-polish.md  PLAN.md  PROGRESS.md  README.md  RELEASING.md  docker-compose.yml  merry-orbiting-petal-agent-a2332f4f357db4745.md  merry-orbiting-petal.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml
docs/dev/: ARCHITECTURE.md  PLAN-02-infrastructure.md  PLAN-03-scoring.md  PLAN-06-testing.md  PLAN-08-comparison.md  PLAN-09-advisor.md  RELEASE-PLAN.md  plan8.md
examples/: example_coverage_audit.py  example_mode1_custom_scores.py  example_mode2_reference_based.py  example_mode3_reference_free.py  example_model_comparison.py
faultmap/: __init__.py  analyzer.py  embeddings.py  exceptions.py  labeling.py  llm.py  models.py  report.py  utils.py
faultmap/comparison/: __init__.py  statistics.py
faultmap/coverage/: __init__.py  detector.py
faultmap/scoring/: __init__.py  base.py  entropy.py  precomputed.py  reference.py
faultmap/slicing/: __init__.py  clustering.py  statistics.py
notebooks/: tutorial.ipynb  visualization_demo.ipynb
tests/: conftest.py  test_analyzer.py  test_embeddings.py  test_labeling.py  test_llm.py  test_report.py  test_utils.py
tests/test_comparison/: test_statistics.py
tests/test_coverage/: test_detector.py
tests/test_scoring/: test_entropy.py  test_precomputed.py  test_reference.py
tests/test_slicing/: test_clustering.py  test_statistics.py
