[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faultmap"
version = "0.1.0"
description = "Automatically discover where and why your LLM is failing"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Gabriel Navarro", email = "gabriel.navarrocr@gmail.com" }]
maintainers = [{ name = "Gabriel Navarro", email = "gabriel.navarrocr@gmail.com" }]
keywords = [
    "llm",
    "evaluation",
    "observability",
    "embeddings",
    "clustering",
    "testing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "litellm==1.83.0",
    "tqdm>=4.60",
    "nest-asyncio>=1.5",
]

[project.urls]
Homepage = "https://github.com/gabonavarroo/faultmap"
Repository = "https://github.com/gabonavarroo/faultmap"
Documentation = "https://github.com/gabonavarroo/faultmap#readme"
Issues = "https://github.com/gabonavarroo/faultmap/issues"
Changelog = "https://github.com/gabonavarroo/faultmap/blob/main/CHANGELOG.md"

[project.optional-dependencies]
local = ["sentence-transformers>=2.2"]
rich = ["rich>=13.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "build>=1.0",
    "twine>=5.0",
]
all = ["faultmap[local,rich]"]

[tool.hatch.build.targets.sdist]
exclude = [
    "PLAN*.md",
    "PROGRESS.md",
    "ARCHITECTURE.md",
    "RELEASE-PLAN.md",
    "merry-*.md",
    "CLAUDE.md",
    ".claude/",
    "docs/dev/",
]

[tool.ruff]
target-version = "py310"
line-length = 99
exclude = ["notebooks/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
